log
Mon 06 May 2024 11:15:17 PM UTC: 
 tests:  1|8
total_score: 0/70
cc7f8d3
Wed 08 May 2024 05:53:20 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:17: error: statement with no effect [-Werror=unused-value]
   41 |     nuevo->root == NULL;
      |                 ^
treemap.c:42:20: error: statement with no effect [-Werror=unused-value]
   42 |     nuevo->current == NULL;
      |                    ^
treemap.c:41:10: error: ‘*nuevo.root’ is used uninitialized [-Werror=uninitialized]
   41 |     nuevo->root == NULL;
      |     ~~~~~^~~~~~
treemap.c:42:10: error: ‘*nuevo.current’ is used uninitialized [-Werror=uninitialized]
   42 |     nuevo->current == NULL;
      |     ~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd2a15d
Wed 08 May 2024 05:54:41 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:10: error: ‘TreeNode’ has no member named ‘root’
   41 |     nuevo->root == NULL;
      |          ^~
treemap.c:42:10: error: ‘TreeNode’ has no member named ‘current’
   42 |     nuevo->current == NULL;
      |          ^~
treemap.c:43:10: error: ‘TreeNode’ has no member named ‘lower_than’
   43 |     nuevo->lower_than = lower_than;
      |          ^~
Compilation failed
0245b4c
Wed 08 May 2024 05:56:01 PM UTC: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  1|8
total_score: 0/70
e521476
Wed 08 May 2024 05:56:22 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
b74a138
Wed 08 May 2024 06:01:58 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|6
total_score: 15/70
32a54bb
Wed 08 May 2024 06:11:24 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
47f9fad
Wed 08 May 2024 06:12:12 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:20: error: unused variable ‘parent’ [-Werror=unused-variable]
   56 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
226add3
Wed 08 May 2024 06:15:18 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:20: error: unused variable ‘parent’ [-Werror=unused-variable]
   56 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
7249aea
Wed 08 May 2024 06:18:01 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
5947cc2
Wed 08 May 2024 06:20:09 PM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  0|0
90ed3ac
Wed 08 May 2024 06:20:51 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
d4d2cf8
Wed 08 May 2024 06:21:16 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
05af5d0
Wed 08 May 2024 06:22:55 PM UTC: 
 treemap.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  13|5
total_score: 25/70
96fd21f
Wed 08 May 2024 06:26:29 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
10594d3
Wed 08 May 2024 06:34:04 PM UTC: 
 treemap.c | 46 ++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 46 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:95:47: error: expected ‘)’ before ‘;’ token
   95 |         if(is_equal(tree, claveAux, claveNodo);
      |           ~                                   ^
      |                                               )
treemap.c:101:5: error: expected expression before ‘}’ token
  101 |     }
      |     ^
Compilation failed
556ec92
Wed 08 May 2024 06:34:40 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
cacb3f6
Wed 08 May 2024 06:38:17 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  15|4
total_score: 25/70
e4571db
Wed 08 May 2024 06:39:21 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
2d5692e
Wed 08 May 2024 06:40:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
8cff8ed
Wed 08 May 2024 06:41:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
af94949
Wed 08 May 2024 07:03:45 PM UTC: 
 treemap.c | 16 ++++++----------
 1 file changed, 6 insertions(+), 10 deletions(-)
 tests:  15|4
total_score: 25/70
d64dd7c
Wed 08 May 2024 07:04:54 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  15|4
total_score: 25/70
aef7897
